--- a/research/index.html
+++ b/research/index.html
@@ -115,7 +115,7 @@
 <p>As a postdoc and researcher at Mcity, he developed and deployed a scalable motion planning and control algorithm/software stack for Level-4 CAVs, refer to the below figure. Especially, i) A delay-and-dynamics-aware preview motion control algorithm is proposed, targeting challenges of large time delay, steering lag, and time-varying path curvature. It has some unique features: higher stability against delay, look-ahead capability, and analytical control law which means computationally efficient.  ii) A deterministic sampling trajectory generation algorithm is developed, which can be used in various, not one or some predefined, scenarios and can achieve smooth near-optimal trajectory within bounded computing time. iii) Algorithms for speed tracking, behavior planning, and motion prediction are also designed. On top of these algorithms, a full motion planning and control software stack is developed, which was deployed and tested on the Mcity CAV fleet.</p>
 <p><a href="https://Shbing.github.io/research/Developed-motion-planning-and-control-stack.mp4"><strong>Click on this link or the image below to watch a video.</strong></a>
 <a href="https://Shbing.github.io/research/Developed-motion-planning-and-control-stack.mp4"><figure>
-    <img src="Developed-motion-planning-and-control-stack.png" height="400"/> 
+    <img src="Developed-motion-planning-and-control-stack.jpg" height="400"/> 
 </figure>
 </a></p>
 <p>Refer to the following papers for more details.</p>
@@ -126,13 +126,13 @@
 </ul>
 <p>Services to top media and visitors.
 <figure>
-    <img src="Applications_and_service.png" height="340"/> 
+    <img src="Applications_and_service.jpg" height="340"/> 
 </figure>
 </p>
 <h5 id="2-ai-driven-augmented-reality-for-adversarial-cav-testing">2. AI-driven Augmented Reality for Adversarial CAV Testing</h5>
 <p>Motivated by the embarrassing dilemma that most closed CAV proving grounds do not have an adversarial traffic environment for testing, we proposed and developed an AI-driven sensor-level augmented reality (AR) concept, algorithm pipeline, and software tools to generate an adversarial environment. It can augment the raw sensor data captured in an empty track with diverse weather conditions (e.g., snow and rain) and interactive traffic flows (e.g., cars and pedestrians). Such kind of augmented reality enables the CAV to safely experience various weather/traffic challenges in limited time and space. The system has a few unique features when rendering the virtual weather and traffic: <strong>controllable, high fidelity, and dynamic</strong>. It has been deployed to the Mcity testing track and serves the daily testing.
 <figure>
-    <img src="AI-driven-sensor-level-AR.png" height="400"/> 
+    <img src="AI-driven-sensor-level-AR.jpg" height="400"/> 
 </figure>
 </p>
 <h5 id="3-energy-efficient-speed-planning-for-automated-eco-driving">3. Energy-Efficient Speed Planning for Automated Eco-Driving</h5>
